# tabi-adk-agents

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: analytics-eval.yml
agents/: __init__.py  base.py  capacity_planner.py  data_scientist.py  general_analyst.py  interviewing_coach.py  offer_advisor.py  pipeline_analyst.py  prompts.py  sourcing_strategist.py  storytelling_agent.py
config/: __init__.py
core/: __init__.py  app_factory.py  conversation_manager.py  gcp_project.py  goal_attainment_retry.py  grounding_enforcement.py  guardrail_plugin.py  handoff.py  ids.py  logging_config.py  orchestrator.py  planning_claims.py  query_plans.py  response_validator.py  router.py  salvage_payload.py  salvage_plugin.py  session_plugins.py  spans.py  specialist_schema.py  trace_panels.py  trace_projection.py  turn_error_sink.py  usage_tracker.py
evaluation/: __init__.py  _mock_tool.py  adk_bridge.py  baseline.yaml  baseline_mocked.yaml  eval_config.json  eval_writer.py  evalset_paths.py  evaluators.py  golden_dataset.py
evaluation/goldens/: factuality.yaml  (+5 more)
examples/: demo_grounding_redaction.py
models/: __init__.py  planning.py
tests/: test_adk_eval.py  test_demo_example.py  test_golden_dataset.py  test_grounding_enforcement.py  test_query_plans.py  test_safety_settings_pin.py  test_trace_projection.py
tools/: __init__.py  adk_tools.py  distribution_query_tool.py  handle_registry.py  knowledge_tools.py  mock_semantic_layer.py  planning_tools.py  statistical_tools.py  tool_context.py  tool_tracer.py
(+14 files in other folders)
